fixes for tasks from gitHub

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -516,6 +516,10 @@
     .generateIconClass(975);
 }
 
+.ncl-icon-import {
+    .generateIconClass(976);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
