--- a/src/nuclio/common/components/monaco/monaco.tpl.html
+++ b/src/nuclio/common/components/monaco/monaco.tpl.html
@@ -2,5 +2,6 @@
     <div igz-monaco-editor
          data-code-file="selectedCodeFile"
          data-editor-theme="$ctrl.selectedTheme"
-         data-mini-monaco="$ctrl.miniMonaco"></div>
+         data-mini-monaco="$ctrl.miniMonaco"
+         data-read-only="$ctrl.readOnly"></div>
 </div>
