--- a/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.less
+++ b/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.less
@@ -40,7 +40,7 @@
                     .event-body {
                         font-size: 13px;
                         outline: none;
-                        border-color: @pale-grey;
+                        border: 1px solid @pale-grey;
                         resize: none;
                         width: 100%;
                         height: 100px;
