--- a/src/nuclio/projects/project/functions/version/version.less
+++ b/src/nuclio/projects/project/functions/version/version.less
@@ -390,6 +390,11 @@
                         .nclSunflowerYellow(0.4);
                         border: solid 1px @color;
                     }
+
+                    &.json-block {
+                        white-space: pre-wrap;
+                        line-height: 1.5;
+                    }
                 }
 
                 .label-value-row {
