--- a/src/nuclio/common/components/breadcrumbs/breadcrumbs.less
+++ b/src/nuclio/common/components/breadcrumbs/breadcrumbs.less
@@ -1,16 +1,17 @@
 ncl-breadcrumbs {
+
+    .igz-icon-right {
+        font-size: 11px;
+        font-weight: 100;
+        margin: 0 14px;
+    }
+
     .ncl-header-subtitle {
         color: #898593;
+    }
 
-        .igz-icon-right {
-            font-size: 11px;
-            font-weight: 100;
-            padding: 0 6px;
-        }
-
-        .ncl-bold-subtitle {
-            color: #474056;
-            font-weight: bold;
-        }
+    .ncl-bold-subtitle {
+        color: #474056;
+        font-weight: bold;
     }
 }
