--- a/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
@@ -72,6 +72,7 @@
 
         <div class="common-table-cell actions-menu">
             <igz-action-menu data-actions="$ctrl.actions"
+                             data-list-class="$ctrl.listClass"
                              data-on-fire-action="$ctrl.onFireAction">
             </igz-action-menu>
         </div>
