--- a/src/nuclio/projects/project/functions/create-function/create-function.less
+++ b/src/nuclio/projects/project/functions/create-function/create-function.less
@@ -19,67 +19,79 @@
             display: flex;
             justify-content: center;
 
+            .function-type-block() {
+                width: 503px;
+                height: 254px;
+                background-color: @ncl-white;
+                opacity: 0.9;
+                box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+                border-radius: 2px;
+                display: flex;
+                align-items: center;
+
+                .function-type-icon {
+                    background: url('/assets/images/background-circle.svg') no-repeat center;
+                    width: 145px;
+                    height: 145px;
+                    line-height: 1px;
+                    position: relative;
+
+                    .icon {
+                        position: absolute;
+                        color: @ncl-dark-sky-blue;
+                    }
+                }
+
+                .function-type-info {
+                    .type-title {
+                        color: @ncl-light-blue;
+                        font-size: 18px;
+                        font-weight: bold;
+                    }
+
+                    .type-description {
+                        font-size: 14px;
+                        color: @ncl-dusk-three;
+                    }
+                }
+
+                &.selected {
+                    opacity: 1;
+                    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.35);
+
+                    .function-type-icon {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        border-radius: 50%;
+                        .nclLightBlue(0.8);
+                        background-color: @ncl-light-blue;
+
+                        .icon {
+                            color: @ncl-white;
+                        }
+                    }
+                }
+            }
+
             .function-from-scratch-wrapper {
                 padding: 0 24px;
 
                 .function-from-scratch {
-                    width: 503px;
-                    height: 254px;
-                    background-color: @ncl-white;
-                    opacity: 0.9;
-                    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-                    border-radius: 2px;
-                    display: flex;
-                    align-items: center;
+                    .function-type-block;
 
                     .function-type-icon {
-                        background: url('/assets/images/background-circle.svg') no-repeat center;
-                        width: 145px;
-                        height: 145px;
                         margin: 0 30px 0 39px;
-                        line-height: 1px;
-                        position: relative;
 
                         .icon {
-                            position: absolute;
                             top: 49px;
                             left: 50px;
-                            color: @ncl-dark-sky-blue;
                             font-size: 46px;
                         }
                     }
 
                     .function-type-info {
                         margin-top: -22px;
-
-                        .type-title {
-                            color: @ncl-light-blue;
-                            font-size: 18px;
-                            font-weight: bold;
-                        }
-
-                        .type-description {
-                            font-size: 14px;
-                            color: @ncl-dusk-three;
-                        }
-                    }
-
-                    &.selected {
-                        opacity: 1;
-                        box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.35);
-
-                        .function-type-icon {
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            border-radius: 50%;
-                            .nclLightBlue(0.8);
-                            background-color: @ncl-light-blue;
-
-                            .icon {
-                                color: @ncl-white;
-                            }
-                        }
                     }
                 }
             }
@@ -88,28 +100,14 @@
                 padding: 0 24px;
 
                 .function-from-template {
-                    width: 503px;
-                    height: 254px;
-                    background-color: @ncl-white;
-                    opacity: 0.9;
-                    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-                    border-radius: 2px;
-                    display: flex;
-                    align-items: center;
+                    .function-type-block;
 
                     .function-type-icon {
-                        background: url('/assets/images/background-circle.svg') no-repeat center;
-                        width: 145px;
-                        height: 145px;
                         margin: 0 30px 0 33px;
-                        line-height: 1px;
-                        position: relative;
 
                         .icon {
-                            position: absolute;
                             top: 26px;
                             left: 23px;
-                            color: @ncl-dark-sky-blue;
                             font-size: 100px;
                         }
                     }
@@ -117,34 +115,34 @@
                     .function-type-info {
                         margin-top: -2px;
 
-                        .type-title {
-                            color: @ncl-light-blue;
-                            font-size: 18px;
-                            font-weight: bold;
-                        }
-
                         .type-description {
-                            font-size: 14px;
-                            color: @ncl-dusk-three;
                             max-width: 240px;
                         }
                     }
+                }
+            }
 
-                    &.selected {
-                        opacity: 1;
-                        box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.35);
+            .function-import-wrapper {
+                padding: 0 24px;
 
-                        .function-type-icon {
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            border-radius: 50%;
-                            .nclLightBlue(0.8);
-                            background-color: @ncl-light-blue;
+                .function-import {
+                    .function-type-block;
 
-                            .icon {
-                                color: @ncl-white;
-                            }
+                    .function-type-icon {
+                        margin: 0 30px 0 33px;
+
+                        .icon {
+                            top: 49px;
+                            left: 50px;
+                            font-size: 46px;
+                        }
+                    }
+
+                    .function-type-info {
+                        margin-top: -2px;
+
+                        .type-description {
+                            max-width: 240px;
                         }
                     }
                 }
