--- a/src/igz_controls/components/search-input/search-input.less
+++ b/src/igz_controls/components/search-input/search-input.less
@@ -93,7 +93,7 @@
     .container-search-input {
         border: 0;
         margin: 0;
-        font-family: @font-family-sans-serif-title;
+        font-family: @font-family-sans-serif;
         font-size: 14px;
         height: 52px;
         line-height: 52px;
