--- a/src/igz_controls/less/general-rules.less
+++ b/src/igz_controls/less/general-rules.less
@@ -68,7 +68,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6, .title, .btn {
-    font-family: @font-family-sans-serif-title;
+    font-family: @font-family-sans-serif;
 }
 
 .row {
