--- a/src/igz_controls/components/slider-input-block/slider-input-block.less
+++ b/src/igz_controls/components/slider-input-block/slider-input-block.less
@@ -1,4 +1,5 @@
 .igz-slider-input-block {
+    position: relative;
 
     .igz-slider-input-title {
         float: left;
@@ -71,14 +72,33 @@
         min-height: 30px;
         line-height: 30px;
 
+        &.with-measure-units {
+            width: 18%;
+            padding-right: 0;
+
+            .igz-slider-input-current-value-text {
+                margin-right: 4px;
+            }
+        }
+
+        &.with-value-unit {
+            padding-right: 21px;
+        }
+
         .igz-slider-input-current-value-text {
             color: #252d36;
             font-size: 13px;
             font-weight: 400;
             background-color: @white;
             text-align: right;
-            margin-right: 4px;
         }
+    }
+
+    .igz-slider-input-unit-label {
+        position: absolute;
+        right: 0;
+        min-height: 30px;
+        line-height: 30px;
     }
 
     // Units dropdown
