Fixed disabling/enabling deploy button for replicas and key-value inputs

--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -1,7 +1,7 @@
 <div class="ncl-key-value-input">
     <form name="$ctrl.keyValueInputForm"
           class="input-wrapper"
-          data-ng-click="$ctrl.onEditInput()">
+          data-ng-mousedown="$ctrl.onEditInput()">
         <igz-validating-input-field class="nuclio-validating-input input-key"
                                     data-ng-class="{'use-type': $ctrl.useType}"
                                     data-field-type="input"
