Fixed bug with inserting new line in build textarea

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -26,7 +26,7 @@
             .textarea-field {
                 height: 177px;
                 resize: none;
-                white-space: nowrap;
+                white-space: pre;
                 overflow-x: auto;
             }
         }
