--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.less
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.less
@@ -21,12 +21,28 @@
                 min-width: 0;
             }
 
-            .scrollable-content {
-                display: flex;
-                min-height: 55px;
-                padding-right: 10px;
-                overflow: hidden;
-                align-items: center;
+            .description-content {
+                position: relative;
+                white-space: normal;
+                max-height: 40px;
+                text-align: justify;
+            }
+
+            .description-content:before {
+                content: '...';
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                background-color: @ncl-white;
+            }
+
+            .description-content:after {
+                content: '\0000a0';
+                position: absolute;
+                width: 100%;
+                height: 16px;
+                z-index: 1;
+                background-color: @ncl-white;
             }
         }
 
