--- a/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
+++ b/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
@@ -30,7 +30,7 @@
 
 </span>
 
-<span data-ng-if="$ctrl.mainHeaderTitle.function === 'Create function"
+<span data-ng-if="$ctrl.mainHeaderTitle.function === 'Create function'"
       class="ncl-bold-subtitle">
         {{$ctrl.mainHeaderTitle.function}}
 </span>
