--- a/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
+++ b/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
@@ -30,9 +30,9 @@
 
 </span>
 
-<span data-ng-if="$ctrl.mainHeaderTitle.function && !$ctrl.mainHeaderTitle.version"
+<span data-ng-if="$ctrl.mainHeaderTitle.function === 'Create function'"
       class="ncl-bold-subtitle">
-        Create function
+        {{$ctrl.mainHeaderTitle.function}}
 </span>
 
 <span data-ng-if="$ctrl.mainHeaderTitle.version"
