Fixed visual bugs in breadcrumbs

--- a/src/nuclio/common/components/breadcrumbs-dropdown/breadcrumbs-dropdown.less
+++ b/src/nuclio/common/components/breadcrumbs-dropdown/breadcrumbs-dropdown.less
@@ -17,6 +17,11 @@
             margin: 0 8px;
             border-radius: 50%;
             background-color: transparent;
+
+            &:hover {
+                background-color: @ncl-pale-grey;
+                transition: transform .2s linear;
+            }
         }
 
         .ncl-dropdown-expanded {
