--- a/src/nuclio/common/components/breadcrumbs-dropdown/breadcrumbs-dropdown.tpl.html
+++ b/src/nuclio/common/components/breadcrumbs-dropdown/breadcrumbs-dropdown.tpl.html
@@ -1,7 +1,5 @@
 <div class="ncl-breadcrumbs-dropdown dropdown"
-     data-ng-class="{'open': $ctrl.showDropdownList}"
-     data-ng-mouseover="$ctrl.onHoverDropdown(true)"
-     data-ng-mouseleave="$ctrl.onHoverDropdown(false)">
+     data-ng-class="{'open': $ctrl.showDropdownList}">
     <span class="breadcrumb-toggle" data-ng-click="$ctrl.showDropdown()">
         {{$ctrl.title}}
 
