make port and ingresses not mandatory

--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -132,6 +132,7 @@
                                   data-value-step="1"
                                   data-suffix-unit="{{attribute.unit}}"
                                   data-validation-is-required="{{!attribute.allowEmpty}}"
+                                  data-allow-empty-field="attribute.allowEmpty"
                                   data-min-value="0"></igz-number-input>
             </div>
             <div class="igz-col-91 attribute-field ingresses-wrapper"
