set `ingress-host` as not mandatory

--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -10,7 +10,7 @@
                                     data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                     data-update-data-field="name"
                                     data-form-object="$ctrl.keyValueInputForm"
-                                    data-validation-is-required="true"
+                                    data-validation-is-required="!$ctrl.keyOptional"
                                     data-placeholder-text="Type key"></igz-validating-input-field>
 
         <igz-default-dropdown class="input-type"
