--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -146,6 +146,7 @@
                     <div class="table-body" data-ng-repeat="ingress in $ctrl.ingresses">
                         <ncl-key-value-input class="new-label-input"
                                              data-list-class="ingresses-wrapper"
+                                             data-key-optional="true"
                                              data-row-data="ingress"
                                              data-use-type="false"
                                              data-submit-on-fly="true"
