Impl [nuclio] Change font family in "Build Commands" field

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -28,6 +28,7 @@
                 resize: none;
                 white-space: pre;
                 overflow-x: auto;
+                font-family: "Source Code Pro", "Courier New";
             }
         }
     }
