--- a/src/igz_controls/components/number-input/number-input.less
+++ b/src/igz_controls/components/number-input/number-input.less
@@ -1,4 +1,4 @@
-.number-input {
+.igz-number-input {
     min-width: 115px;
     font-family: @font-family-sans-serif;
     font-size: 14px;
@@ -51,7 +51,7 @@
         padding: 0;
         text-align: left;
         background-color: transparent;
-        max-width: 60%;
+        max-width: 100%;
     }
 
     .additional-left-block {
