--- a/src/igz_controls/components/number-input/number-input.tpl.html
+++ b/src/igz_controls/components/number-input/number-input.tpl.html
@@ -1,5 +1,5 @@
-<div class="number-input"
-    data-ng-class="[{'invalid': $ctrl.checkInvalidation()},
+<div class="igz-number-input"
+     data-ng-class="[{'invalid': $ctrl.checkInvalidation()},
                     {'pristine': !$ctrl.numberInputChanged},
                     {'disabled': $ctrl.isDisabled},
                     {'submitted': $ctrl.formObject.$submitted}]">
@@ -18,7 +18,7 @@
            max="{{$ctrl.maxValue}}"
            placeholder="{{$ctrl.placeholder}}"
            data-precision="{{$ctrl.precision}}"
-           data-ng-focus="$ctrl.inputFocused=true"
+           data-ng-focus="$ctrl.inputFocused = true"
            data-ng-blur="$ctrl.onBlurInput()"
            data-ng-change="$ctrl.onChangeInput()"
            data-ng-disabled="$ctrl.isDisabled"
