--- a/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
@@ -15,7 +15,7 @@
                data-ng-readonly="$ctrl.readOnly"
                data-ng-model="$ctrl.data"
                data-ng-model-options="$ctrl.inputModelOptions"
-               data-ng-required="$ctrl.validationIsRequired === 'true'"
+               data-ng-required="$ctrl.validationIsRequired"
                data-ng-maxlength="$ctrl.validationMaxLength"
                data-ng-pattern="$ctrl.validationPattern"
                data-ng-focus="$ctrl.focusInput()"
@@ -48,7 +48,7 @@
                   data-ng-class="{'invalid': $ctrl.isFieldInvalid()}"
                   name="{{$ctrl.inputName}}"
                   data-ng-model="$ctrl.data"
-                  data-ng-required="$ctrl.validationIsRequired === 'true'"
+                  data-ng-required="$ctrl.validationIsRequired"
                   data-ng-maxlength="$ctrl.validationMaxLength"
                   data-ng-pattern="$ctrl.validationPattern"
                   data-ng-focus="$ctrl.focusInput()"
@@ -67,7 +67,7 @@
                name="{{$ctrl.inputName}}"
                data-ng-model="$ctrl.data"
                data-ng-model-options="$ctrl.inputModelOptions"
-               data-ng-required="$ctrl.validationIsRequired === 'true'"
+               data-ng-required="$ctrl.validationIsRequired"
                data-ng-maxlength="$ctrl.validationMaxLength"
                data-ng-pattern="$ctrl.validationPattern"
                data-ng-focus="$ctrl.focusInput()"
