--- a/src/nuclio/common/less/palette.less
+++ b/src/nuclio/common/less/palette.less
@@ -16,9 +16,11 @@
 @ncl-light-grayish-blue: #f2f2f5;
 @ncl-border-color: #e6ebf1;
 @ncl-pale-grey: #e1e0e5;
+@ncl-very-light-grey: #e0e0e0;
 @ncl-pale-grey-two: #edecef;
 @ncl-pale-grey-three: #f3f3f6;
 @ncl-silver: #c9c9cd;
+@ncl-solid-grey: #a9a9a9;
 @ncl-grey: #acaab3;
 @ncl-greyish-purple: #898593;
 @ncl-dark-greyish-blue: #9997a0;
