IG-1857 [Nuclio] Implement new design in "Status & Monitoring" tab. (less fixed)

--- a/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
+++ b/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
@@ -144,7 +144,9 @@
         }
     }
 
-    .ncl-status-monitoring:hover .ncl-status-tooltip {
-        display: flex;
+    .ncl-status-monitoring:hover {
+        .ncl-status-tooltip {
+            display: flex;
+        }
     }
 }
