--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -22,9 +22,9 @@
             }
         }
 
-        .build-command-field {
+        .build-command-field,.build-dependencies-field {
             .textarea-field {
-                height: 177px;
+                height: 70px;
                 resize: none;
                 white-space: pre;
                 overflow-x: auto;
