fixes regarding to merge nuclio

--- a/src/igz_controls/less/dialogs.less
+++ b/src/igz_controls/less/dialogs.less
@@ -4,6 +4,10 @@
     background: url('/assets/images/oops.png') no-repeat -1000px;
 }
 
+.ngdialog {
+    z-index: 10000;
+}
+
 .ngdialog-theme-iguazio {
     @animation-duration: 0.2s;
     @animation-function: ease;
@@ -159,7 +163,7 @@
                         white-space: nowrap;
                     }
 
-                    .checkboxes-list{
+                    .checkboxes-list {
                         list-style: none;
                         margin: 0;
                         padding: 8px 0 0 0;
