--- a/src/nuclio/common/components/monaco/monaco.less
+++ b/src/nuclio/common/components/monaco/monaco.less
@@ -1,7 +1,7 @@
 .ncl-monaco {
     > div {
         height: 100%;
-        border: 1px solid #e1e0e5
+        border: 1px solid @ncl-pale-grey;
     }
 
     .monaco-editor {
