codeEntryType added to function model.

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -17,7 +17,7 @@
         padding: 24px 41px;
 
         .ncl-code-entry-url {
-            width: 22.5%;
+            width: 700px;
         }
     }
 
