--- a/src/nuclio/common/components/navigation-tabs/navigation-tabs.tpl.html
+++ b/src/nuclio/common/components/navigation-tabs/navigation-tabs.tpl.html
@@ -10,25 +10,20 @@
              data-ng-if="item.status"
              data-ng-class="{'ncl-status-ready': item.status === 'ready',
                              'ncl-status-error': item.status === 'error',
-                             'ncl-status-building': item.status !== 'ready' &&
-                                                    item.status !== 'error' &&
-                                                    item.status !== 'not yet deployed'}"></div>
+                             'ncl-status-building': $ctrl.isFunctionBuilding(item.status)}">
+        </div>
 
         <div class="ncl-status-tooltip"
              data-ng-if="item.status"
              data-ng-class="{'ncl-status-tooltip-ready': item.status === 'ready',
                              'ncl-status-tooltip-error': item.status === 'error',
-                             'ncl-status-tooltip-building': item.status !== 'ready' &&
-                                                            item.status !== 'error' &&
-                                                            item.status !== 'not yet deployed'}">
+                             'ncl-status-tooltip-building': $ctrl.isFunctionBuilding(item.status)}">
 
             <div class="ncl-status-icon"
                   data-ng-if="item.status !== 'not yet deployed'"
                   data-ng-class="{'ncl-icon-ready': item.status === 'ready',
                                   'ncl-icon-error': item.status === 'error',
-                                  'ncl-icon-building': item.status !== 'ready' &&
-                                                       item.status !== 'error' &&
-                                                       item.status !== 'not yet deployed'}">
+                                  'ncl-icon-building': $ctrl.isFunctionBuilding(item.status)}">
             </div>
             <div class="ncl-status-title">
                 {{item.status}}
